@@ -1,5 +1,6 @@
 #!/usr/bin/python3
 
+import sys
 from lintian_brush.control import (
     ensure_minimum_version,
     update_control,
@@ -21,9 +22,9 @@ try:
     with open('debian/compat', 'r') as f:
         minimum_version = f.read().strip()
 except FileNotFoundError:
-    minimum_version = 9999  # Not used anyway.
-else:
-    update_control(source_package_cb=bump_debhelper)
+    sys.exit(0)
+
+update_control(source_package_cb=bump_debhelper)
 
 print("Bump debhelper dependency to >= %s, since that's what is "
       "used in debian/compat." % minimum_version)
