@@ -1,2 +1,0 @@
-Bump debhelper dependency to >= 9999, since that's what is used in debian/compat.
-Fixed-Lintian-Tags: package-needs-versioned-debhelper-build-depends
